# kobuki-x

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.GAJJA  README.md  package.xml  waiterbot.rosinstall
kobuki_2d_laser/: CMakeLists.txt  README.md  package.xml
kobuki_2d_laser/interactions/: pairing.interactions
kobuki_2d_laser/launch/: minimal.launch  standalone.launch  urg_node.launch
kobuki_2d_laser/launch/includes/: gmapping.launch.xml
kobuki_2d_laser/rapps/make_a_map/: make_a_map.launch  make_a_map.launch.xml  make_a_map.rapp
kobuki_2d_laser/rapps/video_teleop/: video_teleop.launch  video_teleop.rapp
math_toolkit/: .project  CMakeLists.txt  package.xml
math_toolkit/include/math_toolkit/: geometry.hpp
math_toolkit/src/: common.cpp  geometry.cpp
virtual_sensor/: .cproject  .project  CMakeLists.txt  package.xml
virtual_sensor/include/virtual_sensor/: virtual_sensor_node.hpp
virtual_sensor/msg/: Column.msg  Wall.msg
virtual_sensor/src/: virtual_sensor_node.cpp
waiterbot/: .cproject  CMakeLists.txt  README.md  package.xml  waiterbot.rosinstall
waiterbot/include/waiterbot/: ar_markers.hpp  common.hpp  ir_scan_node2.hpp  navigator.hpp  virtual_sensor_node.hpp  waiter_node.hpp
waiterbot/launch/: waiterbot.launch  waiterbot_demo.launch  waiterbot_sim.launch
waiterbot/launch/includes/: _annotations_pub.launch  _ar_tracker.launch  _autodock.launch  _ir_sensors.launch  _master_ctrl.launch  _move_base.launch  _move_base_eband.launch  _safety_ctrl.launch  _virt_sensor.launch
waiterbot/param/: ir_config.yaml  vel_smoother.yaml
waiterbot/param/move_base/: costmap_common_params.yaml  global_costmap_params.yaml
waiterbot/param/move_base_groovy/: costmap_common_params.yaml  global_costmap_params.yaml
waiterbot/param/move_base_multi_layer/: costmap_common_params.yaml  move_base_params.yaml
waiterbot/rviz/: adams_navigation.rviz  chopin_navigation.rviz  elgar_navigation.rviz  one_robot_navigation.rviz  waiterbot3_navigation.rviz  waiterbot_navigation.rviz
waiterbot/scripts/: alvar_ar_publisher.py  get_ir_range.py  ir_sensors.bash  play_sound.bash  table_publisher.py
waiterbot/src/: ar_markers.cpp  common.cpp  ir_scan_node.cpp  ir_scan_node2.cpp  nav_watchdog.cpp  navigator.cpp  waiter_callbacks.cpp  waiter_delivery_handles.cpp  waiter_node.cpp  waiter_tasks.cpp
waiterbot_sensors/: .cproject  .project  CMakeLists.txt
waiterbot_sensors/launch/: ir_sensors.launch
waiterbot_sensors/src/ir_scan/: ir_scan.cpp  ir_scan_node.cpp
waiterbot_suite/graveyard/waiterbot/: CMakeLists.txt
waiterbot_suite/waiterbot_ar_marker_tracking/: .cproject  .project  CMakeLists.txt  README.md  package.xml
waiterbot_suite/waiterbot_ar_marker_tracking/launch/: machinery.launch  tracking.launch
waiterbot_suite/waiterbot_ar_marker_tracking/src/: CMakeLists.txt  main.cpp
waiterbot_suite/waiterbot_ar_pair_approach/: .project  .pydevproject  CMakeLists.txt  package.xml  setup.py
waiterbot_suite/waiterbot_ar_pair_approach/launch/: approach.launch  machinery.launch  turtlebot_approach.launch
waiterbot_suite/waiterbot_ar_pair_approach/scripts/: approach.py  search.py  test_rotate
waiterbot_suite/waiterbot_ar_pair_search_behaviour/: .project  .pydevproject  CMakeLists.txt  package.xml  setup.py
waiterbot_suite/waiterbot_ar_pair_search_behaviour/launch/: machinery.launch  search.launch
waiterbot_suite/waiterbot_ar_pair_search_behaviour/scripts/: search.py  test_rotate
waiterbot_suite/waiterbot_ar_pair_tracking/: .cproject  .project  CMakeLists.txt  README.md  package.xml
waiterbot_suite/waiterbot_ar_pair_tracking/launch/: demo-tracking.launch  machinery.launch  tracking.launch
waiterbot_suite/waiterbot_ar_pair_tracking/src/: CMakeLists.txt  main.cpp
waiterbot_suite/waiterbot_bringup/: .project  CMakeLists.txt  package.xml  setup.py
waiterbot_suite/waiterbot_bringup/concert/: bringup.concert
waiterbot_suite/waiterbot_bringup/launch/: concert_client.launch  minimal.launch  minimal_legacy.launch  minimal_with_appmanager.launch  paired_public.launch
waiterbot_suite/waiterbot_bringup/param/: vel_smoother.yaml
waiterbot_suite/waiterbot_bringup/scripts/: green_button.py  red_button.py  red_button_3.py
waiterbot_suite/waiterbot_bringup/urdf/: waiterbot_v2.urdf
waiterbot_suite/waiterbot_controller/: .cproject  .project  CMakeLists.txt  package.xml
waiterbot_suite/waiterbot_controller/launch/: controller.launch  full.launch
waiterbot_suite/waiterbot_controller/param/: ar_markers.yaml
waiterbot_suite/waiterbot_controller/src/: ar_markers.cpp  nav_watchdog.cpp  navigator.cpp  waiter_node.cpp
waiterbot_suite/waiterbot_ctrl_cafe/: CMakeLists.txt  package.xml
waiterbot_suite/waiterbot_ctrl_cafe/launch/: control_database.launch  controller.launch  full.launch
waiterbot_suite/waiterbot_ctrl_cafe/param/: ar_markers.yaml  navigator.yaml  vel_multiplexer.yaml  vel_smoother.yaml
waiterbot_suite/waiterbot_ctrl_cafe/src/: ar_markers.cpp  nav_watchdog.cpp  navigator.cpp  waiter_callbacks.cpp  waiter_delivery_handles.cpp  waiter_node.cpp  waiter_tasks.cpp
waiterbot_suite/waiterbot_ctrl_nowireless/: .cproject  .project  CMakeLists.txt  package.xml
waiterbot_suite/waiterbot_ctrl_nowireless/data/: global_markers.yaml  waypoints.yaml  yujin.yaml
waiterbot_suite/waiterbot_ctrl_nowireless/launch/: ar_pose_tracker.launch  controller.launch  init_pose_manager.launch  rapp.launch  sim.launch
waiterbot_suite/waiterbot_ctrl_nowireless/param/: ar_marker_processor.yaml  common.yaml  vel_smoother.yaml  vel_smoother_joy.yaml  waypoints.yaml
waiterbot_suite/waiterbot_ctrl_nowireless/scripts/: init_pose_manager.py
waiterbot_suite/waiterbot_ctrl_nowireless/src/: main.cpp
waiterbot_suite/waiterbot_navigation/: CMakeLists.txt  package.xml
waiterbot_suite/waiterbot_sensors/: CMakeLists.txt  README.md  package.xml
yocs_vm_interactor/: CMakeLists.txt  package.xml  setup.py
yocs_vm_interactor/launch/: vm_interactor.launch
yocs_vm_interactor/params/: vel_smoother_pose_controller.yaml
yocs_vm_interactor/scripts/: vm_interactor.py
(+257 files in other folders)
