<?xml version="1.0"?>
<package>
  <name>waiterbot</name>
  <version>0.0.0</version>
  <description>The waiterbot package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/waiterbot</url> -->
  <author email="jorge@yujinrobot.com">Jorge Santos</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
<!--   <build_depend>move_base_msgs</build_depend>   catkenized only on hydro-devel -->
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>cafe_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
<!--   <run_depend>move_base_msgs</run_depend> -->
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>cafe_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
