<?xml version="1.0"?>
<package>
  <name>virtual_sensor</name>
  <version>0.0.0</version>
  <description>The virtual_sensor package</description>

  <maintainer email="jorge@yujinrobot.com">Jorge Santos</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://ros.org/wiki/virtual_sensor</url> -->
  <author email="jorge@yujinrobot.com">Jorge Santos</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>semantic_region_handler</build_depend>
  <build_depend>math_toolkit</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>semantic_region_handler</run_depend>
  <run_depend>math_toolkit</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>