<?xml version="1.0"?>
<package>
  <name>yocs_vm_interactor</name>
  <version>0.0.0</version>
  <description>The yocs_vm_interactor package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>vending_machine_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>yocs_ar_pair_tracking</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>yocs_navigator</run_depend>

  <export>
  </export>
</package>
