<package>
  <name>waiterbot_ar_pair_search_behaviour</name>
  <version>0.0.0</version>
  <description>
    Search behaviour for when the waiterbot hasn't yet detected the approach marker pair.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/Roles and role management for human interactive agents in the concert.</url>
  <url type="repository">https://github.com/yujinrobot/kobuki-x</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki-x/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
