<?xml version="1.0"?>
<package>
  <name>waiterbot_ar_pair_tracking</name>
  <version>0.0.0</version>
  <description>The waiterbot_sensors package</description>
  <maintainer email="d.stonier@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Daniel Stonier</author> 
  <author>Jorge Santos Simon</author> 

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waiterbot_ar_pair_tracking</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>waiterbot_ar_marker_tracking</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>waiterbot_ar_marker_tracking</run_depend>

</package>
