<?xml version="1.0"?>
<package>
  <name>waiterbot_bringup</name>
  <version>0.0.0</version>
  <description>The waiterbot_bringup package</description>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/waiterbot_bringup</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>adc_driver</build_depend>
  <build_depend>arduino_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>adc_driver</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
