<?xml version="1.0"?>
<package>
  <name>waiterbot_controller</name>
  <version>0.0.0</version>
  <description>The waiterbot_controller package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <url type="repository">https://github.com/yujinrobot/kobuki-x/tree/hydro-devel/waiterbot</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki-x/issues</url>
  <author email="jorge@yujinrobot.com">Jorge Santos</author>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/waiterbot_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cafe_msgs</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>arduino_interface</build_depend>
  <build_depend>adc_driver</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cafe_msgs</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>adc_driver</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>

  <run_depend>navigation</run_depend>
  <run_depend>waiterbot_bringup</run_depend>
  <export>
  </export>
</package>
