<?xml version="1.0"?>
<package>
  <name>waiterbot_ctrl_cafe</name>
  <version>0.0.0</version>
  <description>
    The robot serves you a drink in cafe. 
  </description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jorge@yujinrobot.com">Jorge Santos</author> 
  <license>BSD</license>

  <!--<url type="website">http://ros.org/wiki/turtlebot</url>-->
  <url type="repository">https://github.com/yujinrobot/kobuki-x</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki-x/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>cafe_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>waiterbot_bringup</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>waiterbot_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>cafe_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>waiterbot_bringup</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>waiterbot_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>tf</run_depend>
</package>
