<?xml version="1.0"?>
<package>
  <name>waiterbot_ctrl_nowireless</name>
  <version>0.0.0</version>
  <description>
    The robot serves you a drink from vending machine! It talks to VM using vision system
  </description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/waiterbot_ctrl_nowireless</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>waiterbot_bringup</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>waiterbot_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>yocs_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>waiterbot_bringup</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>waiterbot_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>
  <run_depend>tf</run_depend>
</package>
