<?xml version="1.0"?>
<package>
  <name>waiterbot_sensors</name>
  <version>0.0.0</version>
  <description>The waiterbot_sensors package</description>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author> 

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/waiterbot_sensors</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>adc_driver</build_depend>
  <build_depend>arduino_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>yocs_math_toolkit</build_depend>
  <run_depend>adc_driver</run_depend>
  <run_depend>arduino_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>yocs_math_toolkit</run_depend>

</package>
